--- a/biography.html
+++ b/biography.html
@@ -34,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x1284.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="biography.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">APPLICATIONS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Creative Suite</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="illustrator.html">Adobe Illustrator</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="photoshop.html" data-toggle="dropdown-submenu" aria-expanded="false">Adobe Photoshop</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="timelapse.html">Timelapse<br></a></div></div><a class="dropdown-item" href="premiere.html">Adobe Premiere</a><a class="dropdown-item" href="animate.html">Adobe Animate&nbsp;</a><a class="dropdown-item" href="dreamweaver.html">Adobe Dreamweaver&nbsp;</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Microsoft Office</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="word.html">Microsoft Word</a></div></div><a class="dropdown-item" href="123d.html">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">CREDENTIALS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Credentials</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="julianguas.github.io/documents/Ai Certification.pdf" target="_blank">Adobe Illustrator</a></div></div><a class="dropdown-item" href="#">Resume<br></a><a class="dropdown-item" href="#">SAT</a><a class="dropdown-item" href="#">ACT</a></div></li><li class="nav-item"><a class="nav-link link" href="reference.html" aria-expanded="false">REFERENCE</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="biography.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">APPLICATIONS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Creative Suite</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="illustrator.html">Adobe Illustrator</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="photoshop.html" data-toggle="dropdown-submenu" aria-expanded="false">Adobe Photoshop</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="timelapse.html">Timelapse<br></a></div></div><a class="dropdown-item" href="premiere.html">Adobe Premiere</a><a class="dropdown-item" href="animate.html">Adobe Animate&nbsp;</a><a class="dropdown-item" href="dreamweaver.html">Adobe Dreamweaver&nbsp;</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="123d.html" data-toggle="dropdown-submenu" aria-expanded="false">Microsoft Office</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="word.html">Microsoft Word</a></div></div><a class="dropdown-item" href="123d.html">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" aria-expanded="false" data-toggle="dropdown-submenu">CREDENTIALS</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Credentials</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="julianguas.github.io/documents/Ai Certification.pdf" target="_blank">Adobe Illustrator</a></div></div><a class="dropdown-item" href="#">Resume<br></a><a class="dropdown-item" href="#">SAT</a><a class="dropdown-item" href="#">ACT</a></div></li><li class="nav-item"><a class="nav-link link" href="reference.html" aria-expanded="false">REFERENCE</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3v" style="background-color: rgb(193, 193, 193); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -85,7 +85,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-3y" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-3y" style="background-color: rgb(65, 65, 65); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -158,7 +158,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-3z" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article" id="header3-3z" style="background-color: rgb(65, 65, 65); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -191,7 +191,7 @@ Phone:<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="kcyMuuSUYZTlPrzf8ZpMkHZKwM4lK2JPGbuiNnuet/jAACXYiOCNRO+vAprdv9jgBEnHa3mjpoeQFcUBF5v8QjBSU4gNPisdRjstOol8u8bRxjUh1uwoOBCjPZAVtXQg" data-form-email="true">
+                    <input type="hidden" value="tp7PE/rVvnFADXUp7/VlU8gyylRXoPrj6lUk+ty8Qp/1RGHpjeckCGCLniiB9j7QeE9gWpNQyzJtW1Yt/X/Pb8EIVlxRU+HAAJjZwTdIvK1iqIEQ0CLPCwNwFn2vMfSQ" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
